Header finished but Font family not implemented yet

--- a/home.html
+++ b/home.html
@@ -4,9 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Flumserberg Relaunch</title>
+  <link rel="stylesheet" href="style.css"> <!--Css implementieren-->
+
 </head>
 <body>
+  <header>
+    <!--starten mit Navigationsleiste-->
+    <div class="navbar">   
+      <div class="redrectNav">
+        <img class="logo" src="./assets/logo-white.svg" alt="Logo Flumserberg">
+      </div>
+      <nav>
+        <a class="navanchor" >Home</a>
+        <a class="navanchor">Events</a>
+        <a class="navanchor">Unterkünfte</a>
+      </nav>
+      <img class="mountains" src="./assets/mounainsNav.svg" alt="Graphical Element shaped like mountains">
+      <div class="adress">
+        <p class="korrBold">
+          Infostelle Flumserberg
+        </p>
+        <p class="korr">
+          Flumserbergstrasse 196
+        </p>
+      </div>
+      <div class="redCont">
+        <a class="navanchorwhite">Kontakt</a>
+      </div>
+    </div>
+  </header>
   
 </body>
 </html>
