added fonts Roboto Roboto Condensed, finished Navbar, created main and started on the first section

--- a/home.html
+++ b/home.html
@@ -34,6 +34,15 @@
       </div>
     </div>
   </header>
+  <main>
+    <section class="start">
+      <div class="störer">
+        <p class="lead">
+          Winter am Flumserberg
+        </p>
+      </div>
+    </section>
+  </main>
   
 </body>
 </html>
