finished section 1 without including picture

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
   <main>
     <section class="start">
       <div class="störer">
-        <p class="lead">
+        <p class="titleWhite störertext">
           Winter am Flumserberg
         </p>
       </div>
