finished section Winter Erleben, started on section Restaurants

--- a/home.html
+++ b/home.html
@@ -35,11 +35,87 @@
     </div>
   </header>
   <main>
-    <section class="start">
-      <div class="störer">
-        <p class="titleWhite störertext">
+    <section class="sektion">
+      <div class="störerred">
+        
+        <h1 class="titleWhite störertext">
           Winter am Flumserberg
-        </p>
+        </h1>
+      </div>
+    </section>
+    <section class="sektion">
+      <div class="location">
+        <div class="loccont">
+          <p class="locroot">
+            Home/
+          </p>
+          <h2 class="loctext">
+            Winter erleben
+          </h2>
+        </div>
+      </div>
+      <div class="sectiontextbox">
+        <div class="adtextbox">
+          <p class="leadp textcentered">
+            Schneespass zwischen Zürich und Chur
+          </p>
+          <p class="leadred textcentered">
+            Den Flumserberg-Winter erleben
+          </p>
+          <p class="basetext textcentered">
+           <strong> Lebensfreude pur:</strong> Der Flumserberg lädt dazu ein, den Winter in vollen Zügen zu geniessen. 
+            Die grösste Wintersportdestination zwischen Zürich und Chur zieht Gäste aus nah und fern in ihren Bann – 
+            mit Aktivitätenvielfalt, Top-Service und attraktiven Angeboten, vor allem auch für Familien und Gruppen. 
+            Wer möchte, reist ganz bequem per S-Bahn direkt aus Zürich an. 
+          </p>
+          <p class="leadp textcentered">
+            Auf eine grandiose Wintersaison! 
+            Am Flumserberg ist Ihnen diese sicher …
+          </p>
+        </div>
+        <div class="adtextbox">
+          <p class="leadp textcentered">
+            Schweizer Paradies für Wintersportler:Innen
+          </p>
+          <p class="leadred textcentered">
+            Das Skigebiet Flumserberg
+          </p>
+          <p class="basetext textcentered">
+            Skifahrer:innen und Snowboarder:innen jeden Alters sind im Wintersportgebiet Flumserberg ganz in ihrem Element. 
+            Der Schnee präsentiert sich aber auch für viele weitere Aktivitäten als ideale Spielwiese. 
+            Schlitteln, Winterwandern oder Langlaufen? 
+            Die Wahl liegt bei Ihnen! Der Nightride bietet allen Gästen die Gelegenheit zu unvergleichlichem Pistenvergnügen 
+            unter dem Sternenhimmel. 
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="sektion">
+      <div class="location">
+        <div class="loccont">
+          <p class="locroot">
+            Home/
+          </p>
+          <h2 class="loctext">
+            Restaurants
+          </h2>
+        </div>
+      </div>
+      <div class="sectiontextbox">
+        <div class="adtextbox">
+          <p class="leadp textcentered">
+            Die kulinarische Seite des Flumserbergs
+          </p>
+          <p class="leadred textcentered">
+            Gemütliche Berg- und Alprestaurants
+          </p>
+          <p class="basetext textcentered">
+            Am GenussBerg Flumserberg präsentiert sich der Geschmack der Region in immer wieder neuem Ambiente. 
+            Mal werden traditionelle Gerichte modern interpretiert. 
+            Anderswo werden kreative Köstlichkeiten in urchigem Ambiente serviert. 
+            Eine Extraportion Gastfreundschaft ist an jedem kulinarischen Zwischenstopp inklusive. 
+            Somit eignen sich die Berg- und Alprestaurants ideal für Pausen an erlebnisreichen Wintertagen. 
+        </div>
       </div>
     </section>
   </main>
