finished section restaurants

--- a/home.html
+++ b/home.html
@@ -117,6 +117,9 @@
             Somit eignen sich die Berg- und Alprestaurants ideal für Pausen an erlebnisreichen Wintertagen. 
         </div>
       </div>
+      <div class="karrusellrest">
+        
+      </div>
     </section>
   </main>
   
