finished section Sportgeschäfte und Kurse

--- a/home.html
+++ b/home.html
@@ -118,7 +118,46 @@
         </div>
       </div>
       <div class="karrusellrest">
-        
+
+      </div>
+    </section>
+    <section class="sektion">
+      <div class="location">
+        <div class="loccont">
+          <p class="locroot">
+            Home/
+          </p>
+          <h2 class="loctext">
+            SPortgeschäfte & Kurse
+          </h2>
+        </div>
+      </div>
+      <div class="sectiontextbox">
+        <div class="adtextbox">
+          <p class="leadp textcentered">
+            Service der Spitzenklasse für Wintersportler:Innen
+          </p>
+          <p class="leadred textcentered">
+            Sportgeschäfte und Skikurse
+          </p>
+          <p class="basetext textcentered">
+            Ski oder Snowboard mieten oder kaufen, kleine Reparaturen oder jährlicher Service, Winterbekleidung oder Zubehör: 
+            Die drei Standorte des INTERSPORT Network Flumserberg und drei weitere Fachgeschäfte garantieren,
+             dass Sie perfekt für den Schneesport ausgestattet sind. 
+             Die Fachleute vor Ort freuen sich auf Ihren Besuch! <br/><br/>
+             <strong>Apropos Service:</strong>
+              Dieser wird auch bei der Schweizer Ski- und Snowboardschule Flumserberg grossgeschrieben. 
+              Ob privat oder in der Gruppe, für ein paar Stunden oder mehrere Tage, Ski oder Snowboard – 
+              werfen Sie unbedingt einen Blick auf das umfangreiche Kursangebot!
+        </div>
+      </div>
+      <div class="skimgbox">
+        <div class="skimgcont">
+
+        </div>
+        <div class="skimgcont">
+          
+        </div>
       </div>
     </section>
   </main>
