started on the footer...

--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
             Home/
           </p>
           <h2 class="loctext">
-            SPortgeschäfte & Kurse
+            Sportgeschäfte & Kurse
           </h2>
         </div>
       </div>
@@ -161,6 +161,75 @@
       </div>
     </section>
   </main>
-  
+  <footer>
+    <div class="footerkontaktcont">
+      <div class="footerktktbox">
+        <p class="departement">
+          Flumser Bergbahnen
+        </p>
+        <p class="footertext">
+          Molseralpstrasse 9 <br/>
+          8898 Flumserberg
+        </p>
+        <div class="icontextcont">
+            <img class="icon" src="./assets/phone-call-icon.svg"/>
+          <p class="footertext">
+            +41 81 720 15 15
+          </p>
+        </div>
+        <div class="icontextcont">
+          <img class="icon" src="./assets/email.svg"/>
+        <p class="footertext">
+          info@flumserbergbahnen.ch
+        </p>
+      </div>
+      
+      </div>
+      <div class="footerktktbox">
+        <p class="departement">
+          Heidiland Tourismus <br/>
+          infostelle Flumserberg
+        </p>
+        <p class="footertext">
+          Flumserbergstrasse 196 <br/>
+          8898 Flumserberg
+        </p>
+        <div class="icontextcont">
+            <img class="icon" src="./assets/phone-call-icon.svg"/>
+          <p class="footertext">
+            +41 81 720 18 18
+          </p>
+        </div>
+        <div class="icontextcont">
+          <img class="icon" src="./assets/email.svg"/>
+        <p class="footertext">
+          flumserberg@heidiland.com
+        </p>
+        </div>
+      </div>
+      <div class="footerktktbox">
+        <p class="departement">
+          Schweizer Ski- und <br/>
+           Snowboardschule
+        </p>
+        <p class="footertext">
+          Flumserbergstrasse 196 <br/>
+          8898 Flumserberg
+        </p>
+        <div class="icontextcont">
+            <img class="icon" src="./assets/phone-call-icon.svg"/>
+          <p class="footertext">
+            +41 81 733 39 39
+          </p>
+        </div>
+        <div class="icontextcont">
+            <img class="icon" src="./assets/email.svg"/>
+          <p class="footertext">
+            info@sssf.ch
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
