footer abgeschlossen Links und Bilder noch einzufügen

--- a/home.html
+++ b/home.html
@@ -162,6 +162,7 @@
     </section>
   </main>
   <footer>
+    <div class="contentwrapper">
     <div class="footerkontaktcont">
       <div class="footerktktbox">
         <p class="departement">
@@ -230,6 +231,41 @@
         </div>
       </div>
     </div>
+    <div class="socialcont">
+        <span class="socialbtn">
+          <img class="socials" src="./assets/facebook-circle.svg" alt="link to facebook">
+          <a></a>
+        </span>
+        <span class="socialbtn">
+          <img class="socials" src="./assets/CIS-A2K_Instagram_Icon_(Black).svg.png" alt="link to facebook">
+          <a></a>
+        </span>
+        <span class="socialbtn">
+          <img class="socials" src="./assets/82781_twitter_4096x4096.png" alt="link to facebook">
+          <a></a>
+        </span>
+        <span class="socialbtn">
+          <img class="socials" src="./assets/youtube.svg" alt="link to facebook">
+          <a></a>
+        </span>
+    </div>
+  </div>
+  <div class="footerend">
+    <div class="impressumcont">
+    <a class="impressum">
+      © 2020 Bergbahnen Flumserberg AG.  
+    </p>
+    <a class="impressum">
+        Partner.    
+    </p>
+    <a class="impressum">
+          AGB          
+    </p>
+    <a class="impressum">
+     Datenschutz
+    </p>
+  </div>
+  </div>
   </footer>
 </body>
 </html>
