included page Unterkünfte and started working on it

--- a/events.html
+++ b/events.html
@@ -17,7 +17,7 @@
       <nav>
         <a href="./home.html" class="navanchor" >Home</a>
         <a href="./events.html" class="navanchor">Events</a>
-        <a class="navanchor">Unterkünfte</a>
+        <a href="./unterkünfte.html" class="navanchor">Unterkünfte</a>
       </nav>
       <img class="mountains" src="./assets/mounainsNav.svg" alt="Graphical Element shaped like mountains">
       <div class="adress">
@@ -39,7 +39,7 @@
     <div class="störerred">
         
       <h1 class="titleWhite störertext">
-        Winter am Flumserberg
+        Events
       </h1>
     </div>
   </section>
