--- a/home.html
+++ b/home.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flumserberg Relaunch</title>
   <link rel="stylesheet" href="style.css"> <!--Css implementieren-->
-
 </head>
 <body>
   <header>
@@ -18,7 +17,7 @@
       <nav>
         <a href="./home.html" class="navanchor" >Home</a>
         <a href="./events.html" class="navanchor">Events</a>
-        <a class="navanchor">Unterkünfte</a>
+        <a href="./unterkünfte.html" class="navanchor">Unterkünfte</a>
       </nav>
       <img class="mountains" src="./assets/mounainsNav.svg" alt="Graphical Element shaped like mountains">
       <div class="adress">
