--- a/unterkünfte.html
+++ b/unterkünfte.html
@@ -29,7 +29,7 @@
         </p>
       </div>
       <div class="redCont">
-        <a class="navanchorwhite">Kontakt</a>
+        <a href="./kontakt.html" class="navanchorwhite">Kontakt</a>
       </div>
     </div>
   </header>
