added text to eventcards in Erlebnisse

--- a/erlebnisse.html
+++ b/erlebnisse.html
@@ -36,8 +36,8 @@
 
 <main>
   <section class="sektion">
+    <img src="./assets/imgs/Erlebnisse/Titelbild.webp" alt="Titelbild" class="imgfull">
     <div class="störerred">
-        
       <h1 class="titleWhite störertext">
         Erlebnisse
       </h1>
@@ -46,38 +46,77 @@
   <section class="listsection">
     <div class="contentwrapper">
       <div class="eventcard">
-        <div class="eventimg"></div>
+        <div class="eventimg">
+
+        </div>
         <div class="eventtextcont">
-          <p class="leadred">Eventname</p>
-          <p class="basetext">event lorem ipsum naâdfasdf</p>
+          <p class="leadred">Kostenlose Übungsländer</p>
+          <p class="basetext">Skifahren und Snowboarden soll Freude bereiten.<br/><br/>
+
+            Deshalb nutzen Sie und Ihre Kinder Zauberteppiche und Kinderskilifte, um die wichtigsten Grundlagen auf einem oder zwei Brettern zu erlernen. 
+            Dies ist kostenlos in den Übungsländern Tannenboden und Prodalp möglich.</p>
         </div>
       </div>
       <div class="eventcard">
         <div class="eventimg"></div>
         <div class="eventtextcont">
-          <p class="leadred">Eventname</p>
-          <p class="basetext">event lorem ipsum naâdfasdf</p>
+          <p class="leadred">Erlebnispiste Häxäwäldli</p>
+          <p class="basetext">Sind Sie bereit, im Skigebiet Flumserberg Zauberhaftes zu erleben? <br/> <br/>
+
+            Dann nichts wie los ins HäxäWäldli! 
+            </p>
         </div>
       </div>
       <div class="eventcard">
         <div class="eventimg"></div>
         <div class="eventtextcont">
-          <p class="leadred">Eventname</p>
-          <p class="basetext">event lorem ipsum naâdfasdf</p>
+          <p class="leadred">Schlittelspass mit der ganzen Familie</p>
+          <p class="basetext">Zum Familienwinter am Flumserberg gehört eine Schlittelpartie einfach dazu. <br/><br/>
+            Eltern mit grösseren Kindern nehmen auf der 3 km langen, mittelschweren Strecke von Prodalp nach Tannenheim Fahrt auf. </p>
         </div>
       </div>
       <div class="eventcard">
         <div class="eventimg"></div>
         <div class="eventtextcont">
-          <p class="leadred">Eventname</p>
-          <p class="basetext">event lorem ipsum naâdfasdf</p>
+          <p class="leadred">Winter-Hotspot Prodalp </p>
+          <p class="basetext">Ob Langläufer:innen, Winterwandernde, Schneeschuhwandernde, Skifahrer:innen oder Schlittler:innen: Sie alle treffen sich auf Prodalp, einem der Winter-Hotspots am Flumserberg.</p>
         </div>
       </div>
       <div class="eventcard">
         <div class="eventimg"></div>
         <div class="eventtextcont">
-          <p class="leadred">Eventname</p>
-          <p class="basetext">event lorem ipsum naâdfasdf</p>
+          <p class="leadred">Nachtschlitteln</p>
+          <p class="basetext">Das Highlight während dem Nachtschlitteln am Flumserberg?<br/><br/>
+ 
+            Die einmalige Stimmung auf der beleuchteten Piste, inmitten der bei Dunkelheit mystisch anmutenden Landschaft. Im Anschluss heisst es: In die Kurven legen, auf der Geraden Fahrt aufnehmen und schliesslich adrenalingeladen ins Ziel – ein Abenteuer, das sich definitiv lohnt!</p>
+        </div>
+      </div>
+      <div class="eventcard">
+        <div class="eventimg"></div>
+        <div class="eventtextcont">
+          <p class="leadred">Nachtskifahren</p>
+          <p class="basetext">Während der Wintersaison machen Skifahrer:innen und Snowboarder:innen jeden Freitag die Nacht zum Tag. <br><br>
+
+            Von 19.00 bis 21.00 Uhr steht das Nachtskifahren auf dem Programm. Jeweils donnerstags und samstags können Schlittler:innen auf der beleuchteten Piste von Prodalp bis Tannenheim zwischen 19.00 und 21.00 Uhr runtersausen.</p>
+        </div>
+      </div>
+      <div class="eventcard">
+        <div class="eventimg"></div>
+        <div class="eventtextcont">
+          <p class="leadred">Hallenbad Flumserberg</p>
+          <p class="basetext">Mit den Angeboten «Hallenbad & Sauna Flumserberg» bietet das Schweizer Wintersportgebiet eine äusserst erholsame Option. In der Ferienregion Heidiland weiss zudem die «Tamina Therme» Wellnessfans vollends zu begeistern – mit spirituellen Zeremonien und Ritualen, Show-Aufgüssen, Schönheitskuren, Massagen und vielem mehr. 
+          </p>
+        </div>
+      </div>
+      <div class="eventcard">
+        <div class="eventimg"></div>
+        <div class="eventtextcont">
+          <p class="leadred">Freeriden, 
+            Ski- und Snowboard-
+            touren </p>
+          <p class="basetext">FUN, aber sicher! <br><br>
+
+            Getreu diesem Motto stellen wir allen Gästen gerne unsere qualifizierten Tourenführer:innen zur Seite. </p>
         </div>
       </div>
      
