--- a/erlebnisse.html
+++ b/erlebnisse.html
@@ -46,8 +46,8 @@
   <section class="listsection">
     <div class="contentwrapper">
       <div class="eventcard">
-        <div class="eventimg">
-
+        <div class="eventimgcont">
+          <img src="./assets/imgs/Erlebnisse/Übungsgeländer.webp" alt="Übungsgeländer Img" class="eventimg">
         </div>
         <div class="eventtextcont">
           <p class="leadred">Kostenlose Übungsländer</p>
@@ -58,7 +58,9 @@
         </div>
       </div>
       <div class="eventcard">
-        <div class="eventimg"></div>
+        <div class="eventimgcont">
+          <img src="./assets/imgs/Erlebnisse/Haexaewaeldli.webp" alt="Haexaewaeldli Img" class="eventimg">
+        </div>
         <div class="eventtextcont">
           <p class="leadred">Erlebnispiste Häxäwäldli</p>
           <p class="basetext">Sind Sie bereit, im Skigebiet Flumserberg Zauberhaftes zu erleben? <br/> <br/>
@@ -68,7 +70,9 @@
         </div>
       </div>
       <div class="eventcard">
-        <div class="eventimg"></div>
+        <div class="eventimgcont">
+          <img src="./assets/imgs/Erlebnisse/Schlittelspass.webp" alt="Schlittelspass Img" class="eventimg">
+        </div>
         <div class="eventtextcont">
           <p class="leadred">Schlittelspass mit der ganzen Familie</p>
           <p class="basetext">Zum Familienwinter am Flumserberg gehört eine Schlittelpartie einfach dazu. <br/><br/>
@@ -76,14 +80,16 @@
         </div>
       </div>
       <div class="eventcard">
-        <div class="eventimg"></div>
+        <div class="eventimgcont"><img src="./assets/imgs/Erlebnisse/Prodalp.webp" alt="Prodalp Img" class="eventimg"></div>
         <div class="eventtextcont">
           <p class="leadred">Winter-Hotspot Prodalp </p>
           <p class="basetext">Ob Langläufer:innen, Winterwandernde, Schneeschuhwandernde, Skifahrer:innen oder Schlittler:innen: Sie alle treffen sich auf Prodalp, einem der Winter-Hotspots am Flumserberg.</p>
         </div>
       </div>
       <div class="eventcard">
-        <div class="eventimg"></div>
+        <div class="eventimgcont">
+          <img src="./assets/imgs/Erlebnisse/Nachtschlitteln.webp" alt="Nachtschlitteln Img" class="eventimg">
+        </div>
         <div class="eventtextcont">
           <p class="leadred">Nachtschlitteln</p>
           <p class="basetext">Das Highlight während dem Nachtschlitteln am Flumserberg?<br/><br/>
@@ -92,7 +98,9 @@
         </div>
       </div>
       <div class="eventcard">
-        <div class="eventimg"></div>
+        <div class="eventimgcont">
+          <img src="./assets/imgs/Erlebnisse/Nachtskifahren.webp" alt="Nachtskifahren Img" class="eventimg">
+        </div>
         <div class="eventtextcont">
           <p class="leadred">Nachtskifahren</p>
           <p class="basetext">Während der Wintersaison machen Skifahrer:innen und Snowboarder:innen jeden Freitag die Nacht zum Tag. <br><br>
@@ -101,7 +109,9 @@
         </div>
       </div>
       <div class="eventcard">
-        <div class="eventimg"></div>
+        <div class="eventimgcont">
+          <img src="./assets/imgs/Erlebnisse/Wellness.webp" alt="Wellness Img" class="eventimg">
+        </div>  
         <div class="eventtextcont">
           <p class="leadred">Hallenbad Flumserberg</p>
           <p class="basetext">Mit den Angeboten «Hallenbad & Sauna Flumserberg» bietet das Schweizer Wintersportgebiet eine äusserst erholsame Option. In der Ferienregion Heidiland weiss zudem die «Tamina Therme» Wellnessfans vollends zu begeistern – mit spirituellen Zeremonien und Ritualen, Show-Aufgüssen, Schönheitskuren, Massagen und vielem mehr. 
@@ -109,7 +119,9 @@
         </div>
       </div>
       <div class="eventcard">
-        <div class="eventimg"></div>
+        <div class="eventimgcont">
+          <img src="./assets/imgs/Erlebnisse/Freeride.webp" alt="Freeride Img" class="eventimg">
+        </div>
         <div class="eventtextcont">
           <p class="leadred">Freeriden, 
             Ski- und Snowboard-
