corrected the mistake of using to much position absolute

--- a/erlebnisse.html
+++ b/erlebnisse.html
@@ -45,6 +45,27 @@
   </section>
   <section class="listsection">
     <div class="contentwrapper">
+      <div class="unterkunftparagraph">        
+        <div class="adtextbox">
+          <p class="leadp textcentered">
+            Finden Sie Ihr ultimatives Wintersporterlebnis!
+          </p>
+          <p class="leadred textcentered">
+            Ihre Erlebnissplanung einfach gemacht
+          </p>
+          <p class="basetext textcentered">
+            Das ist unsere Prämisse und mithilfe dieses Flyers werden wir es Ihnen ermöglichen ihr Ferienerlebnis Planen zu können. <br><br>
+ 
+Das Ferienparadies Flumserberg ist mit seiner Kinderfreundlichkeit und vielfähltigem Angebot für unsere jüngsten Familienmitglieder der Ort für Familien. <br><br>
+
+Durch weitere Erlebnisse und Möglichkeiten ist es aber auch ein Ort für allmögliche Gruppen. Schulklassen, Vereine und auch Firmen werden begeistert sein.
+Ob das auf der Piste, im Wellnes oder sogar mit Freeride Touren geschieht, jeder wird sein Highlight erleben. <br><br>
+
+Überzeugen Sie sich selbst von unserem Angebot!
+
+          </p>
+        </div>
+      </div> 
       <div class="eventcard">
         <div class="eventimgcont">
           <img src="./assets/imgs/Erlebnisse/Übungsgeländer.webp" alt="Übungsgeländer Img" class="eventimg">
